[package]
name = "rc-s300-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcsc = "2.8.2"
pcsc-sys = "1.2.1"
dialoguer = "0.11.0"
hex-literal = "0.3.4"
tokio = { version = "1.40.0", features = ["full"] }
